--- a/tex/lybeck-laplacereport.tex
+++ b/tex/lybeck-laplacereport.tex
@@ -50,7 +50,7 @@ The truncated SVD method is based on the fact that every matrix $A \in \R^{k \ti
 \begin{equation}
 A = U D V^T,
 \end{equation}
-where $U$ and $V$ are orthogonal matrices and $D$ is a diagonal matrix. The diagonal elements $d_{i,i}$, $i = 1, \ldots , min \left\{ k,n \right\}$ of $D$ are called the \emph{singular values of $D$}.
+where $U$ and $V$ are orthogonal matrices and $D$ is a diagonal matrix. The diagonal elements $d_{i,i}$, $i = 1, \ldots , \min \left\{ k,n \right\}$ of $D$ are called the \emph{singular values of $D$}.
 
 The \emph{pseudoinverse} of $A$ (denoted as $A^+$) can be calculated via the SVD of $A$. We define the pseudoinverse of the diagonal matrix $D \in \R^{k \times n}$ as the diagonal matrix $D^+ \in \R^{n \times k}$ where the diagonal elements have the values
 \begin{equation}
@@ -75,7 +75,7 @@ Although we now know that linear systems of the type $Af = m$ can easily be solv
 
 Let $m = A f + \eps$, where $\eps$ is some small random noise. It would seem logical that this kind of a problem could be solved approximately with the same method as the problems described earlier with no noise present, as $Af + \eps \approx Af$. This will however not work, as we will come to see later. The reason to this comes from the so called \emph{condition number} of the coefficient matrix $A$.
 
-The condition number of a matrix $A \in \R^{k \times n}$ is defined as the ratio of the largest and smallest singular of $A$. In the case $A$ has an SVD as described in section \ref{sec:svd}, the condition number is defined as $\cond(A) = d_1 / d_{min(k,n)}$.
+The condition number of a matrix $A \in \R^{k \times n}$ is defined as the ratio of the largest and smallest singular of $A$. In the case $A$ has an SVD as described in section \ref{sec:svd}, the condition number is defined as $\cond(A) = d_1 / d_{\min(k,n)}$.
 
 In the case of ill-posed inverse problems the condition numbers are large and grow as the size of the matrix grows. This is the reason why naive inversion fails for these problems. As the condition number is large, the least singular values are correspondingly very small. This means that for the pseudoinverse $A^+$ the singular values are very large. As we try to calculate the least squares solution with the naive inversion the right side of the equation becomes $A^+ (Af + \eps)$, where we multiply $A^+$ with the noise $\eps$. This leads to a large error, even thou the noise is quite small, as the inverse singular values are often very much larger. This is the reason why naive inversion fails for ill-posed inverse problems.
 
@@ -92,7 +92,7 @@ Now the least singular value of $A_{\alpha}$ is no smaller that $\alpha$, and th
 \begin{equation}
 T_{\alpha}(m) = A_{\alpha}^+ m = V D_{\alpha} U^T m.
 \end{equation}
-This reconstruction model will be used in this study to solve the inverse Laplace transform. For further reading on truncated SVD, see \cite{samu}, chapter 4.1.
+This reconstruction model will be used in this study to solve the inverse Laplace transform. For further reading on truncated SVD, see \cite{samu}, chapter 4.2.
 
 
 
@@ -139,9 +139,9 @@ F(s) = \int_0^{\infty} e^{-st} f(t) dt
      = \int_0^1 e^{-st} dt
      = \frac{1 - e^{-s}}{s},
 \end{equation}
-and thus the values of the Laplace transform can be easily without using numerical integration methods. This adds both speed and precision to the calculations.
+and thus the values of the Laplace transform can be easily computed without using numerical integration methods. This adds both speed and precision to the calculations.
 
-We then created the measurement points $m = [m_1, m_2, \ldots, m_n]^T + \eps$, where $m_i = F(s_i)$, $F$ is defined as in \eqref{laplace} for the function $f$ and $\eps$ is some random normally distributed noise. The noise used in the reconstruction had the standard deviation of $1 \cdot 10^{-5}$.
+We then created the measurement points $m = [m_1, m_2, \ldots, m_n]^T + \eps$, where $m_i = F(s_i)$, $F$ is defined as in \eqref{laplace} for the function $f$ and the elements $\eps_k$ of the vector $\eps$ are samples from a normal distribution to simulate random noise. The noise used in the reconstruction had the standard deviation of $1 \cdot 10^{-5}$.
 
 The reconstruction $T_\alpha(m)$ from the measurement data $m$ of the function $f$ in the interval $\left[0,3\right]$ could then be calculated with the truncated SVD method with $\alpha$ as the regularization parameter. The results were then recorded with different choices of $\alpha$.
 
